# todo-app

./: .gitignore  Cargo.toml  README.md  explain.md
api/: Cargo.toml
api/migrations/: 20240119134316_todo.sql
api/src/: main.rs
api/src/controller/: handler.rs
api/src/model/: repository.rs
api/src/routes/: route.rs
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
client/src/lib/api/: todo.ts
client/src/styles/: modal.ts
client/src/types/: todo.d.ts
src/: error.rs  main.rs  route.rs  router.rs
src/controller/: handler.rs  routers.rs
src/handlers/: statics.rs
src/model/: data_type.rs  mod.rs  repository.rs
src/services/: statics.rs
todo-api/: Cargo.toml
todo-api/src/: error.rs  lib.rs
todo-api/src/controller/: handler.rs
