[package]
name = "axum-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
async-trait = "0.1.67"
anyhow = "1.0.56"
dotenv = "0.15.0"  
hyper = { version = "1.0.1" , features = ["full"] }
http-body = "1.0.0"
mime = "0.3.16"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.35.1" , features = ["full"] }
serde = { version = "1.0.77" , features = ["derive"] }
serde_json = "1.0.108"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.30"
validator = { version = "0.16.1", features = ["derive"]}